test/assets/invalid/expect-string-in-list.hs
a :: [String]
a = ["1", 'A', "3"]